--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "build:extension": "BUILD_MODE=extension next build",
+    "build:extension": "cross-env BUILD_MODE=extension next build",
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
@@ -70,6 +70,7 @@
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "cross-env": "^7.0.3",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
